--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 		<header class='header'><h2>Picture show</h2></header>
 		<hr/>
 
-		<div id="divImg" class='divImg'>
-			<div>
-			<img src="./images/kotek1.jpg" alt="kotek" class='imgStyle' />	
+		<div id="divImg" class='divContainer'>
+			<div class='divImg__divImg'>
+				<img src="./images/kotek1.jpg" alt="kotek" class='divImg__img' />	
 			</div>
-			<div>
-			<img src="./images/kotek2.jpg" alt="kotek" class='imgStyle' />		
+			<div class='divImg__divImg'>
+				<img src="./images/kotek2.jpg" alt="kotek" class='divImg__img' />		
 			</div>
-			<div>
-			<img src="./images/kotek3.jpg" alt="kotek" class='imgStyle' />	
+			<div class='divImg__divImg'>
+				<img src="./images/kotek3.jpg" alt="kotek" class='divImg__img' />	
 			</div>	
 		</div>
 
-		<div id="obraz"></div>
+		<div id="obraz" class='picture'></div>
 	</div>
 
 
